--- a/src/assets/style/components/_dropdown.css
+++ b/src/assets/style/components/_dropdown.css
@@ -2,6 +2,7 @@ select {
   height: 2.5rem;
   border: none;
   width: 100%;
+  padding-left: 5px;
   font-size: 1.4rem;
   border-radius: 2px;
   color: var(--color-gray-dark-1);
