--- a/src/assets/style/components/_input.css
+++ b/src/assets/style/components/_input.css
@@ -21,3 +21,9 @@ label {
   font-size: 1.5rem;
   width: 100%;
 }
+
+.error {
+  font-size: 1.4rem;
+  margin-top: 5px;
+  color: var(--color-terciary);
+}
