--- a/src/assets/style/components/_button.css
+++ b/src/assets/style/components/_button.css
@@ -6,3 +6,13 @@
   background-color: var(--color-primary);
   cursor: pointer;
 }
+
+.button:hover {
+  color: var(--color-terciary);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.button:active {
+  transform: translate(1px, 2px);
+  box-shadow: none;
+}
