--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -6,6 +6,7 @@
 @import './components/_form.css';
 @import './components/_input.css';
 @import './components/_dropdown.css';
+@import './components/_spinner.css';
 
 @import './layout/_header.css';
 @import './layout/_content.css';
