--- a/src/assets/style/components/_form.css
+++ b/src/assets/style/components/_form.css
@@ -1,10 +1,26 @@
-.form {
+.form-container {
   padding: 4rem;
   width: 40%;
   height: 100%;
   background-color: var(--color-secondary);
   border-radius: 1rem 0 0 1rem;
   color: var(--color-gray-light-1);
+}
+
+.form-modal {
+  border: 1px solid var(--color-gray-light-1);
+  padding: 1rem;
+  margin-top: 5rem;
+}
+
+.form-modal-title {
+  color: var(--color-terciary);
+}
+
+.form-modal-text {
+  font-size: 1.4rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .form-group {
