--- a/src/assets/style/pages/_home.css
+++ b/src/assets/style/pages/_home.css
@@ -24,3 +24,9 @@
 .svg-img {
   box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.8);
 }
+
+.error {
+  margin: 0 auto;
+  font-size: 1.8rem;
+  color: var(--color-gray-light-2);
+}
